--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_current_job_details.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_current_job_details.xml
@@ -169,6 +169,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4.5"
+                    android:digits="123456789."
                     android:ems="10"
                     android:inputType="textPersonName" />
             </LinearLayout>
