--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers_list_display.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offers_list_display.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JobOfferList">
+    tools:context=".JobOffersListDisplay">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btn_compare"
+                android:id="@+id/btn_compare_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -26,7 +26,7 @@
                 android:text="Compare" />
 
             <Button
-                android:id="@+id/btn_cancel"
+                android:id="@+id/btn_cancel_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -52,14 +52,14 @@
                     tools:layout_editor_absoluteY="1dp">
 
                     <TextView
-                        android:id="@+id/txt_joboffers"
+                        android:id="@+id/txt_joboffers_display"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Job Offers"
                         android:textAlignment="center" />
 
                     <ListView
-                        android:id="@+id/jobsListView"
+                        android:id="@+id/jobsListView_display"
                         android:layout_width="match_parent"
                         android:layout_height="532dp"
                         android:text="CheckedTextView" />
