--- a/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offer_compare.xml
+++ b/GroupProject/JobCompare6300/app/src/main/res/layout/activity_job_offer_compare.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
+                android:enabled="false"
                 android:textSize="14sp" />
 
             <EditText
@@ -48,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -69,6 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -77,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -99,6 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -107,6 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -129,6 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -137,6 +144,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -159,6 +167,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -167,6 +176,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -189,6 +199,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -197,6 +208,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -219,6 +231,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -227,6 +240,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -249,6 +263,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -257,6 +272,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -279,6 +295,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -287,6 +304,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -309,6 +327,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
 
             <EditText
@@ -317,6 +336,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="14sp"
+                android:enabled="false"
                 android:text="TextView" />
         </LinearLayout>
 
